--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/mdb.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicon/site.webmanifest">
     <script src="https://kit.fontawesome.com/71f145e8c9.js" crossorigin="anonymous"></script>
     <style>
       .bd-placeholder-img {
@@ -219,7 +223,7 @@
         </em></p>
       </div>
 
-      <div class="container p-5 m-5 border border-light">
+      <div class="container p-5 m-5">
 
         <section class="container">
       
@@ -256,30 +260,30 @@
         <input type="email" id="defaultSubscriptionFormEmail" class="form-control mb-4" placeholder="Your e-mail">
         <button class="btn btn-info btn-pink" type="submit">Subscribe</button>
       </form>
+    </main>
 
-      <footer class="page-footer font-small pink darken-3">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12 py-5">
-              <div class="mb-5 flex-center">
-                <a class="fb-ic">
-                  <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                </a>
-                <a class="ins-ic">
-                  <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                </a>
-                <a class="pin-ic">
-                  <i class="fab fa-pinterest fa-lg white-text fa-2x"> </i>
-                </a>
-              </div>
+    <footer class="page-footer font-small pink darken-3">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 py-5">
+            <div class="mb-5 flex-center">
+              <a class="fb-ic">
+                <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+              </a>
+              <a class="ins-ic">
+                <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+              </a>
+              <a class="pin-ic">
+                <i class="fab fa-pinterest fa-lg white-text fa-2x"> </i>
+              </a>
             </div>
           </div>
         </div>
-        <div class="footer-copyright text-center py-3">© 2020 Copyright:
-          <a href="www.chukwudumebi.me"> Chukwudumebi E. Onwuli</a>
-        </div>
-      </footer> 
-    </main>
+      </div>
+      <div class="footer-copyright text-center py-3">
+        © 2020 Copyright: <a href="www.chukwudumebi.me"> Chukwudumebi E. Onwuli</a>
+      </div>
+    </footer> 
 
     <!-- Scripts 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
